--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,4 +1,4 @@
-<header class="py-4 lg:py-8">
+<header class="py-4 lg:py-8 border-b border-neutral-900">
   <div class="container">
     <a class="block font-bold text-xl" href="{{@site.url}}">
       {{#if @site.logo}}
