--- a/post.hbs
+++ b/post.hbs
@@ -6,11 +6,11 @@
   <article class="py-8">
     <header class="">
       <div class="container">
-        <h1 class="text-5xl uppercase font-bold border-b border-neutral-400 pb-8 tracking-tighter lg:text-7xl xl:text-8xl">{{ title }}</h1>
-        <div class="mt-2 font-bold text-xl">{{ authors }} &mdash; <time datetime="{{date format="YYYY-MM-DD"}}">{{date format="MMM YYYY"}}</time></div>
+        <h1 class="text-5xl uppercase font-bold pb-8 tracking-tighter lg:text-7xl xl:text-8xl">{{ title }}</h1>
+        <div class="lg:text-xl"><strong>By {{ authors }}</strong> <br /> <time datetime="{{date format="YYYY-MM-DD"}}">{{date format="MMM YYYY"}}</time></div>
 
         {{#if feature_image}}
-          <figure class="py-8">
+          <figure class="py-8 -mx-4 sm:-mx-0">
             <img
               srcset="{{img_url feature_image size="s"}} 300w,
                 {{img_url feature_image size="m"}} 600w,
@@ -19,17 +19,18 @@
               sizes="(min-width: 1400px) 1400px, 92vw"
               src="{{img_url feature_image size="xl"}}"
               alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
+              class="max-w-auto w-full"
             />
             {{#if feature_image_caption}}
-              <figcaption class="mt-2 font-bold">{{feature_image_caption}}</figcaption>
+              <figcaption class="mt-2 mx-auto px-4 sm:px-0">{{feature_image_caption}}</figcaption>
             {{/if}}
           </figure>
         {{/if}}
       </div>
     </header>
 
-    <section class="container">
-      <div class="prose prose-mxsr prose-xl">
+    <section class="container flex flex-col items-center">
+      <div class="prose prose-mxsr lg:prose-xl">
         {{content}}
       </div>
     </section>
